# Ouroboros

./: .gitignore  README.md  bench.cpp  meson.build  test_tensor.cpp  thread_test.cpp
doc/: DOC.MD
example/: booltensor_example.cpp  example.cpp  func_example.cpp  iterator_example.cpp  shape_example.cpp  tensor_example.cpp  utils_example.cpp
include/: func.hpp  func0.hpp  macros.hpp  op.hpp  op0.hpp  op1.hpp  op2.hpp  op3.hpp  op4.hpp  ouroboros.hpp  private_impl.hpp  shape.hpp  tensor.hpp  utils.hpp
include/func/: basic.hpp  err_func.hpp  func.hpp  h_trig.hpp  sf_func.hpp  sf_func1.hpp  sf_func2.hpp  trig.hpp
src/: iterator.cpp  meson.build  op.cpp  op3.cpp  shape.cpp  tensor.cpp  utils.cpp
src/cpu/: op.cpp  op.hpp
src/func/scalar/: basic.cpp  err_func.cpp  h_trig.cpp  sf_func.cpp  trig.cpp
src/func/tensor/: basic.cpp  err_func.cpp  h_trig.cpp  sf_func.cpp  trig.cpp
src/op/: bool_op.cpp  op.cpp
src/tensor/: booltensor.cpp  create_tensor.cpp  shape.cpp  slice.cpp  tensor.cpp  utils.cpp
